examples/test/testpolicy17719.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17719
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key12: value9
      key31: value29
      key22: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value45
          key49: value49
          key26: value35
